# aiohttp-beta

./: .ac2msf418s3s466253352~  .breakpoints  .env  .replit  BotBaseOverwrite.py  README.md  a.py  custom_methods.py  data.txt  eat.py  handler.py  help.py  main.py  pastebin.txt  pyproject.toml  requirements.txt  shell.txt  storage.py  templates.py  test.py  threads.py
1.7.3/: slash.py
1.7.3/data/embed/: help.py
1.7.3/data/json/: jobs.py  slash.py
1.7.3/discord/: gateway.py
afk/: afk.py  t.json
cogs/: debug.py  experimental.py  music.py
cogs/commands/: Computer.py  Data.py  Evaluation.py  General.py  SocialMedia.py  cmd.py  data.json  insults.txt  reset.py
cogs/currency/: Currency.py  data.json
cogs/emoji/: emojis.py
cogs/growth/: growth.py
cogs/help/: help.py  rules.py
cogs/moderator/: admin.py  mod.py
cogs/startup/: error.py  readme.md  ready.py  test.html  web.py
data/embed/: help.py
data/json/: help.py  jobs.py  shop.py
discord/: http.py  permissions.py
discord/ext/commands/: bot.py
other/: mongo.py
