[tool.poetry]
name = "capitalismbeta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.11.4"
python-dotenv = "^0.18.0"
jishaku = "^2.2.0"
image = "^1.5.33"
qrcode = "^7.1"
Flask = "^2.0.1"
orjson = "^3.6.0"
discord-py-slash-command = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
