[tool.poetry]
name = "repl_python3_beta_aiohttp-beta"
version = "0.1.0"
description = ""
authors = ["NastyPigz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jishaku = "^2.2.0"
pymongo = "^3.12.0"
python-dotenv = "^0.19.0"
aiohttp = "^3.7.4"
image = "^1.5.33"
discord-py-slash-command = "^2.3.2"
qrcode = "^7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
