[tool.poetry]
name = "repl_python3_beta_get-cocaine"
version = "0.1.0"
description = ""
authors = ["NastyPigz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
python-dotenv = "^0.19.0"
aiohttp = "^3.7.4"
discord = "^1.7.3"
jishaku = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
